// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeatureInformation should match snapshot. should display multiple features with pagination 1`] = `
<div
  aria-describedby="wkp-popup-desc"
  aria-labelledby="wkp-popup-label"
  className="wkp-feature-information"
  role="dialog"
>
  <div
    className="wkp-feature-information-header"
  >
    <span
      id="wkp-popup-label"
    />
    <button
      className="MuiButtonBase-root MuiIconButton-root wkp-close-bt"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      title="Schliessen"
      type="button"
    >
      <span
        className="MuiIconButton-label"
      >
        <svg
          alt="Schliessen"
          fill="currentColor"
          focusable={false}
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    className="wkp-feature-information-body"
  >
    <div
      className="wkp-netzkarte-popup"
    >
      <div
        aria-expanded={false}
        className="wkp-coordinate-toggle"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        Koordinaten
      </div>
      <div
        className="wkp-coordinates-infos wkp-closed"
      >
        <span
          className="wkp-projection-label"
        />
        <span>
          Länge (X): 2
        </span>
        <span>
          Breite (Y): 2
        </span>
      </div>
    </div>
    <div
      className="wkp-pagination-wrapper"
    >
      <span
        className="wkp-pagination-button-wrapper"
      />
      1
       
      von
       
      4
      <span
        className="wkp-pagination-button-wrapper"
      >
        <a
          className="MuiTypography-root MuiLink-root MuiLink-underlineHover wkp-pagination-button MuiTypography-colorPrimary"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          tabIndex="0"
          title="weiter"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M295.6 163.7c-5.1 5-5.1 13.3-.1 18.4l60.8 60.9H124.9c-7.1 0-12.9 5.8-12.9 13s5.8 13 12.9 13h231.3l-60.8 60.9c-5 5.1-4.9 13.3.1 18.4 5.1 5 13.2 5 18.3-.1l82.4-83c1.1-1.2 2-2.5 2.7-4.1.7-1.6 1-3.3 1-5 0-3.4-1.3-6.6-3.7-9.1l-82.4-83c-4.9-5.2-13.1-5.3-18.2-.3z"
            />
          </svg>
        </a>
      </span>
    </div>
  </div>
</div>
`;

exports[`FeatureInformation should match snapshot. should not display header 1`] = `
<div
  aria-describedby="wkp-popup-desc"
  aria-labelledby="wkp-popup-label"
  className="wkp-feature-information"
  role="dialog"
>
  <div
    className="wkp-feature-information-body"
  >
    <div
      className="makeStyles-root-1"
    >
      <div>
        DfA Linien Nr.: undefined
      </div>
      <div>
        Kilometer: NaN
      </div>
    </div>
  </div>
</div>
`;

exports[`FeatureInformation should match snapshot. using the info's popupComponent 1`] = `
<div
  aria-describedby="wkp-popup-desc"
  aria-labelledby="wkp-popup-label"
  className="wkp-feature-information"
  role="dialog"
>
  <div
    className="wkp-feature-information-header"
  >
    <span
      id="wkp-popup-label"
    />
    <button
      className="MuiButtonBase-root MuiIconButton-root wkp-close-bt"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      title="Schliessen"
      type="button"
    >
      <span
        className="MuiIconButton-label"
      >
        <svg
          alt="Schliessen"
          fill="currentColor"
          focusable={false}
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    className="wkp-feature-information-body"
  >
    <div
      className="wkp-netzkarte-popup"
    >
      <div
        aria-expanded={false}
        className="wkp-coordinate-toggle"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        Koordinaten
      </div>
      <div
        className="wkp-coordinates-infos wkp-closed"
      >
        <span
          className="wkp-projection-label"
        />
        <span>
          Länge (X): 2
        </span>
        <span>
          Breite (Y): 2
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`FeatureInformation should match snapshot. using the layers's popupComponent 1`] = `
<div
  aria-describedby="wkp-popup-desc"
  aria-labelledby="wkp-popup-label"
  className="wkp-feature-information"
  role="dialog"
>
  <div
    className="wkp-feature-information-header"
  >
    <span
      id="wkp-popup-label"
    />
    <button
      className="MuiButtonBase-root MuiIconButton-root wkp-close-bt"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      title="Schliessen"
      type="button"
    >
      <span
        className="MuiIconButton-label"
      >
        <svg
          alt="Schliessen"
          fill="currentColor"
          focusable={false}
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    className="wkp-feature-information-body"
  >
    <div
      className="wkp-netzkarte-popup"
    >
      <div
        aria-expanded={false}
        className="wkp-coordinate-toggle"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        Koordinaten
      </div>
      <div
        className="wkp-coordinates-infos wkp-closed"
      >
        <span
          className="wkp-projection-label"
        />
        <span>
          Länge (X): 2
        </span>
        <span>
          Breite (Y): 2
        </span>
      </div>
    </div>
  </div>
</div>
`;
